profile/map: add release build for the linear pipeline, provide old release build

--- a/profile/map/unvanquished.conf
+++ b/profile/map/unvanquished.conf
@@ -7,23 +7,35 @@ extend = "daemon"
 [nobounce]
 bsp = { tool="q3map2", options="-bsp -keeplights -meta -fastmeta -maxarea -samplesize 16" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -nocollapse -faster -fastallocate -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 2 -samplesize 16 -randomsamples -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -nocollapse -faster -fastallocate -sRGB -backsplasharea -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 2 -samplesize 16 -randomsamples -deluxe -lightmapsize 1024 -external" }
 minimap = { tool="q3map2", options="-minimap" }
 
 [fast]
 bsp = { tool="q3map2", options="-bsp -keeplights -meta -fastmeta -maxarea -samplesize 16" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -nocollapse -faster -fastbounce -fastallocate -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 2 -samplesize 16 -randomsamples -bouncegrid -bounce 1 -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -nocollapse -faster -fastbounce -fastallocate -nobouncestore -sRGB -backsplasharea -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 2 -samplesize 16 -randomsamples -bouncegrid -bounce 1 -deluxe -lightmapsize 1024 -external" }
 minimap = { tool="q3map2", options="-minimap" }
 
 [release]
 bsp = { tool="q3map2", options="-bsp -keeplights -meta -maxarea -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
+light = { tool="q3map2", options="-light -nocollapse -fastbounce -fastallocate -nobouncestore -sRGB -backsplasharea -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+minimap = { tool="q3map2", options="-minimap" }
+
+[release-before-0-56]
+bsp = { tool="q3map2", options="-bsp -keeplights -meta -maxarea -samplesize 8" }
+vis = { tool="q3map2", options="-vis" }
 light = { tool="q3map2", options="-light -nocollapse -fastbounce -fastallocate -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+minimap = { tool="q3map2", options="-minimap" }
+
+[release-before-0-52]
+bsp = { tool="q3map2", options="-bsp -keeplights -meta -maxarea -samplesize 8" }
+vis = { tool="q3map2", options="-vis" }
+light = { tool="q3map2", options="-light -nocollapse -fast -fastbounce -fastallocate -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
 minimap = { tool="q3map2", options="-minimap" }
 
 [extreme]
 bsp = { tool="q3map2", options="-bsp -keeplights -meta -maxarea -samplesize 8" }
 vis = { tool="q3map2", options="-vis" }
-light = { tool="q3map2", options="-light -nocollapse -fastallocate -nobouncestore -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
+light = { tool="q3map2", options="-light -nocollapse -fastallocate -nobouncestore -sRGB -backsplasharea -shade -dirty -dirtscale 0.8 -dirtdepth 32 -patchshadows -samples 3 -samplesize 8 -randomsamples -bouncegrid -bounce 16 -deluxe -lightmapsize 1024 -external" }
 minimap = { tool="q3map2", options="-minimap" }
